--- a/orchestrator.yaml
+++ b/orchestrator.yaml
@@ -1,9 +1,9 @@
 data:
   accounts:
     persistent: true
-  orchestrator_information:
+  setting_information:
     default:
-      enginner_information:
+      engineer_information:
         engineer:
           email: ""
           mobile: ""
@@ -167,6 +167,42 @@ instance:
                 function("respond", response)
             model:
               $ref: "/api/accounts/{id} PUT"
+          - do:
+              $action: "elixir"
+              value: |
+                setting = get("setting_information")
+                response = %{ function("get_response_struct") | "method" => v["method"], "res_body" => setting}
+                function("respond", response)
+            model:
+              $ref: "/api/setting GET"
+          - do:
+              $action: "elixir"
+              value: |
+                response = try do
+                  engineer = v["body"]["engineer"]
+                  inspector = v["body"]["inspector"]
+                  set(["setting_information", "engineer_information", "engineer"], engineer)
+                  set(["setting_information", "engineer_information", "inspector"], inspector)
+                  %{function("get_response_struct") | "method" => v["method"]}
+                rescue
+                  _ -> %{function("get_response_struct") | "is_success" => false, "res_body" => "invalid input data"}
+                end
+                function("respond", response)
+            model:
+              $ref: "/api/setting/engineer-inspector-information POST"
+          - do:
+              $action: "elixir"
+              value: |
+                response = try do
+                  system_name = v["body"]["system_name"]
+                  set(["setting_information", "system", "system_name"], system_name)
+                  %{function("get_response_struct") | "method" => v["method"]}
+                rescue
+                  _ -> %{function("get_response_struct") | "is_success" => false, "res_body" => "invalid input data"}
+                end
+                function("respond", response)
+            model:
+              $ref: "/api/setting/system-information POST"
         none:
           $action: "http response"
           body:
@@ -245,6 +281,36 @@ model:
     properties:
       path:
         const: "/api/logout"
+        type: "string"
+    type: "object"
+  /api/setting GET:
+    $parser: "json"
+    properties:
+      method:
+        const: "GET"
+        type: "string"
+      path:
+        const: "/api/setting"
+        type: "string"
+    type: "object"
+  /api/setting/engineer-inspector-information POST:
+    $parser: "json"
+    properties:
+      method:
+        const: "POST"
+        type: "string"
+      path:
+        const: "/api/setting/engineer-inspector-information"
+        type: "string"
+    type: "object"
+  /api/setting/system-information POST:
+    $parser: "json"
+    properties:
+      method:
+        const: "POST"
+        type: "string"
+      path:
+        const: "/api/setting/system-information"
         type: "string"
     type: "object"
 service: {}
