--- a/orchestrator.yaml
+++ b/orchestrator.yaml
@@ -310,6 +310,8 @@ instance:
                   Enum.reject(entities, &match?(%{"category" => ^category, "group" => ^group, "entity" => ^entity}, &1))
                 else
                   Enum.reject(entities, &match?(%{"category" => ^category, "group" => ^group}, &1))
+                  Log.info("HERE?")
+                  set("groups", Enum.reject(get("groups"), &match?(%{"category" => ^category, "group" => ^group}, &1)))
                 end
                 Log.info(new_entities)
                 set("entities", new_entities)
@@ -320,22 +322,34 @@ instance:
           - do:
               $action: "elixir"
               value: |
+                category = v["parameters"]["category"]
                 group = v["parameters"]["group"]
-                entity = v["parameters"]["entity"]
                 
                 group_info = %{
-                  "entity" => entity,
+                  "category" => category,
                   "group" => group,
                   "group_information" => v["body"]
                 }
                 
                 groups = get("groups") || []
                 
-                set("groups",  Enum.reject(groups, &match?(%{"group" => ^group, "entity" => ^entity}, &1)) ++ [group_info])
+                set("groups",  Enum.reject(groups, &match?(%{"category" => ^category, "group" => ^group}, &1)) ++ [group_info])
                 response = %{function("get_response_struct") | "method" => v["method"]}
                 function("respond", response)
             model:
               $ref: "/api/groups POST"
+          - do:
+              $action: "elixir"
+              value: |
+                category = v["parameters"]["category"]
+                group = v["parameters"]["group"]
+                groups = get("groups") || []
+                res_body = groups |> Enum.filter(fn x -> x["category"] == category && x["group"] == group end) |> Enum.at(0)
+                res_body = if res_body, do: res_body, else: nil
+                response = %{function("get_response_struct") | "method" => v["method"], "res_body" => res_body}
+                function("respond", response)
+            model:
+              $ref: "/api/groups GET"
         none:
           $action: "http response"
           body:
@@ -440,6 +454,16 @@ model:
         type: "string"
       path:
         const: "/api/entities"
+        type: "string"
+    type: "object"
+  /api/groups GET:
+    $parser: "json"
+    properties:
+      method:
+        const: "GET"
+        type: "string"
+      path:
+        const: "/api/groups"
         type: "string"
     type: "object"
   /api/groups POST:
